--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: RDP with Xubuntu (Insecure)
+name: CI
 
 on: [push, workflow_dispatch]
 
@@ -7,33 +7,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Install XRDP and Xubuntu Desktop
+    - name: Set up VNC and GNOME
       run: |
         sudo apt-get update
-        sudo apt-get install -y xrdp xorgxrdp xubuntu-desktop
+        sudo apt-get install -y x11vnc gnome-shell dbus-x11
 
-    - name: Configure XRDP for XFCE
-      run: |
-        echo "xfce4-session" > ~/.xsession
-        sudo sed -i 's/^#DefaultDesktop/DefaultDesktop/' /etc/xrdp/xrdp.ini
-        sudo sed -i 's/^#SessionDesktop/SessionDesktop=xfce/' /etc/xrdp/xrdp.ini
-
-    - name: Create user and set password
-      run: |
-        sudo adduser test --disabled-password --gecos ""
-        echo "test:test1234" | sudo chpasswd
-
-    - name: Start XRDP service
-      run: |
-        sudo systemctl enable xrdp
-        sudo systemctl start xrdp
-
-    - name: Download ngrok for Linux
+    - name: Download and auth ngrok
       run: |
         wget https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.tgz
         tar -xf ngrok-v3-stable-linux-amd64.tgz
+        ./ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
 
-    - name: Authenticate ngrok and start tunnel
+    - name: Start VNC and ngrok tunnel
       run: |
-        ./ngrok authtoken 1sexnbULPxa5yDKR7xImFKqCg8o_335Laer65GytXuseDwNEH
-        ./ngrok tcp 3389
+        x11vnc -display :0 -auth /var/run/gdm3/auth_pid -forever -notls -shared &
+        ./ngrok tcp 5900
+      env:
+        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
