--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: VNC with Xfce and Xvfb
 
 on: [push, workflow_dispatch]
 
@@ -7,20 +7,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Set up VNC and GNOME
+    - name: Install VNC, Xvfb, and Xfce
       run: |
         sudo apt-get update
-        sudo apt-get install -y x11vnc gnome-shell dbus-x11
+        sudo apt-get install -y x11vnc xvfb xfce4 xfce4-terminal dbus-x11
 
     - name: Download and auth ngrok
       run: |
         wget https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.tgz
         tar -xf ngrok-v3-stable-linux-amd64.tgz
-        ./ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+        ./ngrok authtoken YOUR_NGROK_AUTH_TOKEN_HERE
 
-    - name: Start VNC and ngrok tunnel
+    - name: Start Xvfb and VNC server
       run: |
-        x11vnc -display :0 -auth /var/run/gdm3/auth_pid -forever -notls -shared &
+        /usr/bin/Xvfb :99 -screen 0 1024x768x24 &
+        sleep 3
+        x11vnc -display :99 -forever -notls -shared -viewonly &
         ./ngrok tcp 5900
-      env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
