--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,55 +1,36 @@
-workflow name: Ubuntu SSH
+name: Ubuntu
+on:
+  push:
+    branches:
+      - '*'
+    paths:
+      - '**.c'
+      - '**.h'
+      - 'compat/*'
+      - '.github/workflows/Ubuntu.yml'
+  pull_request:
+    branches:
+      - '*'
+    paths:
+      - '**.c'
+      - '**.h'
+      - 'compat/*'
+      - '.github/workflows/Ubuntu.yml'
 
-on: 
-  workflow_dispatch:
-    inputs:
-      authuncationcode:
-        description: 'Visit http://remotedesktop.google.com/headless and copy the command after Authentication'
-        required: true
-      pin:
-        description: 'Enter a Pin (more or equal to 6 digits)'
-        required: true
-      authtoken:
-        description: 'NGROK AUTH TOKEN'
-        required: true
-      computername:
-        description: 'MACHINE NAME'
-        default: 'ubuntu'
-        required: true
-      username:
-        description: 'USERNAME'
-        default: 'user'
-        required: true
-      password:
-        description: 'USER PASSWORD'
-        default: 'root'
-        required: true
 
-defaults:
-  run:
-    shell: bash
 
 jobs:
-  build:
+  Ubuntu:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3.0.2
-    - name: Mask Code & Pin.
-      run: |
-        _Token=$(jq -r '.inputs.authtoken' $GITHUB_EVENT_PATH)
-        _CName=$(jq -r '.inputs.computername' $GITHUB_EVENT_PATH)
-        _Pass=$(jq -r '.inputs.password' $GITHUB_EVENT_PATH)
-        echo ::add-mask::$_Token
-        echo ::add-mask::$_CName
-        echo ::add-mask::$_Pass
-        echo NGROK_TOKEN="$_Token" >> $GITHUB_ENV
-        echo ComputerName="$_CName" >> $GITHUB_ENV
-        echo Password="$_Pass" >> $GITHUB_ENV
-    - name: Setup Environment
-      run: |
-        sudo apt-get update
-        bash Setup.sh "${{ env.NGROK_TOKEN }}" "${{ env.ComputerName }}" "${{ github.event.inputs.username }}" "${{ env.Password }}"
-    - name: IP for Connect to your SSH.
-      run: bash Ip.sh "${{ github.event.inputs.username }}"
-    - name: Keep Alive.
-      run: ping 127.0.0.1 > null
+    - uses: actions/checkout@v2
+    - run: |
+        sudo apt-get install -y  build-essential automake libtool libevent-dev libncurses5-dev libmsgpack-dev libssh-dev pkg-config
+        autoupdate
+        ACLOCAL_PATH=/usr/share/aclocal ./autogen.sh
+        ./configure
+        make
+        sudo make install
+
+
+
