--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,27 @@
-name: Remote SSH Command
-on: [push]
+name: Deploy via SSH
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
-  build:
-    name: Build
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Execute remote SSH commands using password
-        uses: appleboy/ssh-action@v1
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master # A popular SSH action
         with:
-          host: test
-          username: root
-          password: root
-          port: 22
-          script: whoami
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.ACTIONS_SSH_PRIVATE_KEY }}
+          # port: 22 # Optional, if using a non-standard port
+          # script: |
+          #   cd /var/www/html
+          #   git pull origin main
+          #   npm install
+          #   npm run build
+          #   systemctl restart myapp
