--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Without public key
 on: [push]
 jobs:
   build:
@@ -7,3 +7,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Setup tmate session
       uses: mxschmitt/action-tmate@v3
+      with:
+        # This parameter tells the action to proceed without checking for a public SSH key on your GitHub account,
+        # thereby suppressing the warning you are seeing.
+        ignore-public-key-warning: true
